# vulkraft

./: LICENSE  README.md
vulkraft/: CMakeLists.txt  clean.sh  configure.sh  run.sh
vulkraft/run/shaders/: gradient.spv
vulkraft/shaders/: cleanshaders.sh  compileshaders.sh  gradient.comp  spirv-dis
vulkraft/src/: main.cpp
vulkraft/src/Renderer/: DeletionQueue.cpp  DeletionQueue.h  DescriptorAllocator.cpp  DescriptorAllocator.h  DescriptorLayoutBuilder.cpp  DescriptorLayoutBuilder.h  Renderer.cpp  Renderer.h  VulkanHelper.cpp  VulkanHelper.h
vulkraft/src/Threading/: Threads.cpp  Threads.h
